--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test</title>
+    <script>
+        gtag('event', 'my_page_load', {
+            'id': '123'
+        });
+    </script>
 </head>
 <body>
     
