--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
        
         function track() {
              debugger;
-             gtag('event', 'my_page_load', {
-                 'test_id': '123'
-             });
+             dataLayer.push({
+                'event': 'my_page_load',
+                'test_id': 123
+            });
          }
          debugger;
          var btn = document.getElementById('test');
