--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         function track() {
              
              dataLayer.push({
-                'event': 'my_page_load',
+                'event': 'my_button_click',
                 'test_id': 123
             });
          }
